<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_main"
    tools:context=".fragments.EndFragment">

    <ImageView
        android:id="@+id/ivLogoEF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo_of_the_application"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="210dp"
        android:background="@drawable/bg_results"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivLogoEF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/results"
            android:fontFamily="@font/bebasneue_bold"
            android:textColor="@color/white"
            android:textSize="38sp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tvCorrectAnswersTitleEF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/correct"
                android:fontFamily="@font/bebasneue_bold"
                android:textColor="@color/white"
                android:textSize="38sp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvCorrectAnswersCountEF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/bebasneue_bold"
                android:textColor="@color/white"
                android:textSize="38sp"
                tools:text="25"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tvScoreTitleEF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/score"
                android:fontFamily="@font/bebasneue_bold"
                android:textColor="@color/white"
                android:textSize="38sp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvScoreCountEF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/bebasneue_bold"
                android:textColor="@color/white"
                android:textSize="38sp"
                tools:text="2134" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/tvRecordTitleEF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/record"
                android:fontFamily="@font/bebasneue_bold"
                android:textColor="@color/white"
                android:textSize="38sp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvRecordCountEF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/bebasneue_bold"
                android:textColor="@color/white"
                android:textSize="38sp"
                tools:text="25134"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTryAgainEF"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/try_again"
            android:fontFamily="@font/bebasneue_regular"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:background="@drawable/btn_lets_go"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBackToHomeEF"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:text="@string/back_to_menu"
            android:textColor="@color/white"
            android:fontFamily="@font/bebasneue_regular"
            android:background="@drawable/btn_back_to_home"
            android:layout_gravity="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>