<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".fragments.MixedModeFragment">

    <ImageButton
        android:id="@+id/ibBackMMF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="21dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/button_back_page"
        android:src="@drawable/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/piCountdownMMF"
        android:layout_width="160dp"
        android:layout_height="92dp"
        android:layout_marginTop="20dp"
        android:max="60"
        android:progress="35"
        app:indicatorColor="#FFB372"
        app:indicatorSize="170dp"
        app:trackColor="#4C40A6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/piCountdownMMF"
        app:layout_constraintEnd_toEndOf="@+id/piCountdownMMF"
        app:layout_constraintStart_toStartOf="@+id/piCountdownMMF"
        app:layout_constraintTop_toTopOf="@+id/piCountdownMMF">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebasneue_bold"
            android:gravity="bottom"
            android:text="@string/time_left"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/tvCountdownValueMMF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bebasneue_bold"
            android:textColor="@color/white"
            android:textSize="36sp"
            tools:text="01:00" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPointsMMF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/piCountdownMMF">

        <TextView
            android:id="@+id/tvPointsTitleMMF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bebasneue_bold"
            android:text="@string/points"
            android:textColor="@color/white"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/tvPointsValueMMF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bebasneue_bold"
            android:textColor="@color/white"
            android:textSize="38sp"
            tools:text="9999" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tvColorMainMMF"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_option"
        android:backgroundTint="@color/white"
        android:layout_marginTop="100dp"
        android:text="@string/light_blue"
        android:fontFamily="@font/bebasneue_bold"
        android:textSize="50sp"
        android:textColor="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llPointsMMF" />

    <LinearLayout
        android:id="@+id/llOptionsFirstMMF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvColorMainMMF">

        <TextView
            android:id="@+id/tOptionOneMMF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/bebasneue_bold"
            android:text="@string/color"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tOptionTwoMMF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/bebasneue_bold"
            android:text="@string/color"
            android:textColor="@color/white"
            android:textSize="30sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llOptionsSecondMMF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llOptionsFirstMMF">

        <TextView
            android:id="@+id/tOptionThreeMMF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bebasneue_bold"
            android:text="@string/color"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tOptionFourMMF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bebasneue_bold"
            android:text="@string/color"
            android:textColor="@color/white"
            android:textSize="30sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llOptionsThirdMMF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llOptionsSecondMMF">

        <TextView
            android:id="@+id/tOptionFiveMMF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bebasneue_bold"
            android:text="@string/color"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tOptionSixMMF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bebasneue_bold"
            android:text="@string/color"
            android:textColor="@color/white"
            android:textSize="30sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>